# esp32-component-pn532

./: .clang-format  .gitignore  CHANGES.md  CMakeLists.txt  README.md  idf_component.yml
examples/simple/: CMakeLists.txt  README.md  main.c
examples/simple/main/: main.c
include/: pn532-mifare.h  pn532-ndef.h  pn532.h
src/: pn532-14443.c  pn532-bus-i2c.c  pn532-bus-spi.c  pn532-bus-uart.c  pn532-internal.h  pn532-mifare.c  pn532-ndef.c  pn532.c
